# vidos

./: .gitignore  README.md  ScreenRec.spec  installer.iss  pyproject.toml
screenrec/: __init__.py  __main__.py  app.py  config.py  recorder.py
screenrec/capture/: __init__.py  audio.py  camera.py  screen.py
screenrec/encoder/: __init__.py  pyav_encoder.py
screenrec/platform/: __init__.py  cursor.py  hotkey.py  keyboard_hook.py  mouse_poll.py  win32.py
screenrec/ui/: __init__.py  annotation_bar.py  camera_pip.py  cursor_hint.py  keystroke_overlay.py  main_window.py  overlay.py  recordings_panel.py  tray.py
