[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenrec"
version = "0.1.0"
description = "免费录屏软件，支持实时标注"
requires-python = ">=3.8"
authors = [{ name = "ScreenRec" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.4,<6.6",
    "mss>=9.0",
    "numpy>=1.21,<2.0",
    "PyAudioWPatch>=0.2.12",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
fast = ["dxcam>=0.0.5"]

[project.scripts]
screenrec = "screenrec.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["screenrec*"]
